// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicesActions /> spec Split index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec close index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec delete index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec open index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec refresh selected indexes by calling commonService 1`] = `
<body
  class="euiBody-hasOverlayMask"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="euiPopover euiPopover--anchorDownCenter"
      data-test-subj="moreAction"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
          >
            EuiIconMock
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="some_html_id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPopover__panel euiPopover__panel--bottom"
        data-autofocus="true"
        role="dialog"
        style="top: 16px; left: -22px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="some_html_id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div>
          <div
            class="euiContextMenu"
            style="height: 0px;"
          >
            <div
              class="euiContextMenuPanel euiContextMenu__panel"
              tabindex="-1"
            >
              <div>
                <div>
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Apply policyButton"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Apply policy
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Close Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Close
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Open Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Open
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Reindex Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Reindex
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem euiContextMenuItem-isDisabled"
                    data-test-subj="Shrink Action"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Shrink
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem euiContextMenuItem-isDisabled"
                    data-test-subj="Split Action"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Split
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="ForceMergeAction"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Force merge
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Refresh Index Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Refresh
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="deleteAction"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Delete
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
  <div
    class="euiOverlayMask euiOverlayMask--aboveHeader"
  >
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiModal euiModal--maxWidth-default"
        tabindex="0"
      >
        <button
          aria-label="Closes this modal window"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
          type="button"
        >
          EuiIconMock
        </button>
        <div
          class="euiModal__flex"
        >
          <div
            class="euiModalHeader"
          >
            <div
              class="euiModalHeader__title"
            >
              Refresh 
              index
            </div>
          </div>
          <div
            class="euiModalBody"
          >
            <div
              class="euiModalBody__overflow"
            >
              <div
                style="line-height: 1.5;"
              >
                <p>
                  The following 
                  index
                   will be refreshed.
                </p>
                <ul
                  style="list-style-type: disc; list-style-position: inside;"
                >
                  <li
                    data-test-subj="UnblockedItem-unblocked_index"
                  >
                    unblocked_index
                  </li>
                </ul>
                <div
                  class="euiSpacer euiSpacer--l"
                />
                <div
                  class="euiCallOut euiCallOut--warning"
                >
                  <div
                    class="euiCallOutHeader"
                  >
                    EuiIconMock
                    <span
                      class="euiCallOutHeader__title"
                    >
                      The following index will not be refreshed because they are closed.
                    </span>
                  </div>
                </div>
                <p />
                <ul
                  style="list-style-type: disc; list-style-position: inside;"
                >
                  <li
                    data-test-subj="BlockedItem-blocked_index"
                  >
                    blocked_index
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--primary"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton euiButton--primary euiButton--fill"
              data-test-subj="refreshConfirmButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Refresh
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<IndicesActions /> spec refresh selected indexes by calling commonService 2`] = `
<body
  class=""
>
  <div>
    <div
      class="euiPopover euiPopover--anchorDownCenter"
      data-test-subj="moreAction"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
          >
            EuiIconMock
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="some_html_id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPopover__panel euiPopover__panel--bottom"
        data-autofocus="true"
        role="dialog"
        style="top: 16px; left: -22px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="some_html_id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div>
          <div
            class="euiContextMenu"
            style="height: 0px;"
          >
            <div
              class="euiContextMenuPanel euiContextMenu__panel"
              tabindex="-1"
            >
              <div>
                <div>
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Apply policyButton"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Apply policy
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Close Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Close
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Open Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Open
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Reindex Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Reindex
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem euiContextMenuItem-isDisabled"
                    data-test-subj="Shrink Action"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Shrink
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem euiContextMenuItem-isDisabled"
                    data-test-subj="Split Action"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Split
                      </span>
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="ForceMergeAction"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Force merge
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="Refresh Index Action"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Refresh
                      </span>
                    </span>
                  </button>
                  <hr
                    class="euiHorizontalRule euiHorizontalRule--full"
                  />
                  <button
                    class="euiContextMenuItem"
                    data-test-subj="deleteAction"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Delete
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;

exports[`<IndicesActions /> spec renders the component and all the actions should be disabled when no items selected 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec shrink action is disabled if multiple indices are selected 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec shrink action is disabled if the selected index is data_stream 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec shrink index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec split action is disabled if multiple indices are selected 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec split action is disabled if the selected index is data_stream 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;
